--- a/src/reviews-block/style.scss
+++ b/src/reviews-block/style.scss
@@ -31,4 +31,16 @@
     .wp-block-paragraph {
         font-size: var(--wp--preset--font-size--lg);
     }
+
+    .wp-block-column {
+        display: flex;
+        justify-content: center;
+        
+        .wp-block-group {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            max-width: 380px;
+        }
+    }
 }
